doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Steve A\Documents\School\CompSci\jars\gpdraw.jar;C:\Program Files\BlueJ\lib\userlib\awt-13.0.jar;C:\Program Files\BlueJ\lib\userlib\base-13.0.jar;C:\Program Files\BlueJ\lib\userlib\gpdraw.jar;C:\Program Files\BlueJ\lib\userlib\guava-14.0.1.jar;C:\Program Files\BlueJ\lib\userlib\inputoutput-13.0.jar;C:\Program Files\BlueJ\lib\userlib\math-13.0.jar;C:\Program Files\BlueJ\lib\userlib\org.eclipse.xtext.xbase.lib-2.9.2.jar;C:\Program Files\BlueJ\lib\userlib\references-13.0.jar;C:\Program Files\BlueJ\lib\userlib\util-13.0.jar;C:\Program Files\BlueJ\lib\userlib\vmutils-13.0.jar;C:\Users\Steve A\Documents\GitHub\tx3
-d
C:\Users\Steve A\Documents\GitHub\tx3\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Steve A\Documents\GitHub\tx3\HumanPlayer.java
<---- end of javadoc command ---->
Loading source file C:\Users\Steve A\Documents\GitHub\tx3\HumanPlayer.java...
C:\Users\Steve A\Documents\GitHub\tx3\HumanPlayer.java:17: error: <identifier> expected
    private dynamic void update(){
                   ^
1 error
